Git: Quick Commit изменения ДЗ 1,2,5 Git: Push

--- a/Доп.задание.html
+++ b/Доп.задание.html
@@ -8,10 +8,8 @@
       <title>Доп.задания</title>
   </head>
   <body>
-    <div class="circle">
-      <canvas id="canvas"></canvas>
-    </div>
-    <div id="block" onmouseover="changeItem()" onmouseout="rechangeItem()"></div>
+    <div class="circle"></div>
+    <div class="block"></div>
     <p></p>
     <div>
       <button onclick="numberN()">Цифры от 1-20</button>
@@ -25,9 +23,9 @@
     </div>
     <p></p>
     <div>
-      <input id="firstFildsClear" type="text" />
-      <input id="secondFildsClear" type="text" />
-      <input id="threeFildsClear" type="text" />
+      <input class="clearInput" id="firstFildsClear" type="text" />
+      <input class="clearInput" id="secondFildsClear" type="text" />
+      <input class="clearInput" id="threeFildsClear" type="text" />
       <button id="clearButton">Очистить</button>
     </div>
     <p></p>
